--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "extract-text-webpack-plugin": "^2.1.0"
+    "extract-text-webpack-plugin": "^2.1.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
