--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-preset-react": "^6.24.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0"
   }
 }
